# Echotome

./: .gitignore  CHANGELOG.md  Index.html  MOBILE_V3_SPEC.md  Package.json  README.md  README2.md  Structure  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
docs/: CLIENT_INTEGRATION.md  DEPLOYMENT.md  SECURITY.md
echotome/: __init__.py  abraxas_bridge.py  active_region.py  api.py  audio_features.py  audio_layer.py  cli.py  config.py  crypto.py  crypto_core.py  identity_keys.py  image_sigil.py  imprint.py  migration.py  pipeline.py  privacy.py  privacy_profiles.py  recovery.py  ritual_certificates.py  sessions.py  sigil_layer.py  stego.py  temporal_salt_chain.py  vaults.py
echotome_mobile/: README_MOBILE.md  app.json  index.js  package.json  tsconfig.json
echotome_mobile/src/: App.tsx
echotome_mobile/src/__tests__/: hooks.test.ts
echotome_mobile/src/api/: client.ts  types.ts
echotome_mobile/src/components/: AudioRitualControl.tsx  AudioSelector.tsx  Button.tsx  FormField.tsx  PlaybackStatusBar.tsx  PrivacyPill.tsx  RecoveryCodesModal.tsx  SessionCountdown.tsx  SigilPreview.tsx  VaultCard.tsx
echotome_mobile/src/config/: env.ts
echotome_mobile/src/hooks/: useAutoLock.ts  useHardwareKeystore.ts
echotome_mobile/src/navigation/: index.tsx
echotome_mobile/src/screens/: BindRitualScreen.tsx  CreateVaultScreen.tsx  DecryptScreen.tsx  EncryptScreen.tsx  SettingsScreen.tsx  VaultDetailScreen.tsx  VaultListScreen.tsx
echotome_mobile/src/theme/: colors.ts  spacing.ts  typography.ts
echotome_mobile/src/utils/: audioHelpers.ts  formatting.ts  validation.ts
echotome_overlay/: provenance.py  server.py
echotome_web/: package.json
echotome_web/src/api/: client.ts  types.ts
echotome_web/src/app/: globals.css  layout.tsx  page.tsx
echotome_web/src/app/sessions/: page.tsx
echotome_web/src/app/vaults/: page.tsx
echotome_web/src/app/vaults/create/: page.tsx
echotome_web/src/components/: SessionCountdown.tsx
src/: guard.ts  main.ts  pdl.ts  styles.css
tests/: __init__.py  test_audio_layer.py  test_migration.py  test_privacy_profiles.py  test_recovery.py  test_sessions.py
tests/integration/: __init__.py  test_api_sessions.py
