[project]
name = "echotome"
version = "3.1.0"
description = "Echotome v3.1 — Ritual Cryptography Engine (Hardened) with Threat Models, Recovery Codes, Multi-Part Rituals, and Privacy Guardrails"
authors = [{ name = "Daniel K. Meyer" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "soundfile",
  "Pillow",
  "cryptography>=41.0.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-multipart>=0.0.6",
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[project.scripts]
echotome = "echotome.cli:main"
echotome-api = "echotome.api:start_server"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["echotome*"]
exclude = ["Sec*", "Src*", "echotome_mobile*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
